tests/errors/e_limited_lock.pxd
cimport cython

cdef class C:
    cdef cython.pymutex l
